truffle/src/com.oracle.truffle.sl.test/src/tests/error/InvalidAssignmentInBinOp.sl
function double(x) {
  return 2 * x;
}

function main() {
  5 + double(2) = 4;
}